--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
           const move = new THREE.Vector3();
           if (keys["KeyW"]) move.add(forward);
           if (keys["KeyS"]) move.sub(forward);
-          if (keys["KeyD"]) move.add(right);
-          if (keys["KeyA"]) move.sub(right);
+          if (keys["KeyD"]) camera.position.addScaledVector(right, speed * dt);
+          if (keys["KeyA"]) camera.position.addScaledVector(right, -speed * dt);
 
           if (move.lengthSq() > 0) {
             move.normalize();
