--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       // Scene
       const scene = new THREE.Scene();
       scene.background = new THREE.Color(0x87ceeb);
+      scene.fog = new THREE.Fog(0x87ceeb, 30, 250);
 
       // Camera
       const camera = new THREE.PerspectiveCamera(
