--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Faberverse Digital Zoo</title>
+    <title>My Zoo</title>
 
     <style>
       html, body {
@@ -52,11 +52,11 @@
 
   <body>
     <div id="ui">
-      <b>Faberverse Digital Zoo</b><br />
+      <b>My Zoo</b><br />
       Click <b>Start</b> then use <b>WASD</b> + mouse to look.<br />
       <b>Esc</b> releases mouse.
       <div id="small">
-        Tip: Ahoy! If walking feels slow/fast, change <code>WALK_SPEED</code> below.
+        Tip: If walking feels slow/fast, change <code>WALK_SPEED</code> below.
       </div>
       <button id="btn">Start</button>
     </div>
@@ -77,7 +77,6 @@
       // Scene
       const scene = new THREE.Scene();
       scene.background = new THREE.Color(0x87ceeb);
-      scene.fog = new THREE.Fog(0x87ceeb, 30, 250);
 
       // Camera
       const camera = new THREE.PerspectiveCamera(
@@ -106,11 +105,58 @@
       controls.addEventListener("lock", () => (document.getElementById("ui").style.display = "none"));
       controls.addEventListener("unlock", () => (document.getElementById("ui").style.display = "block"));
 
-      // Ground follow helpers
+      // Ground + Animal collision helpers (simple + mobile-friendly)
       const raycaster = new THREE.Raycaster();
-      const down = new THREE.Vector3(0, -1, 0);
+      const DOWN = new THREE.Vector3(0, -1, 0);
+
+      // Walkable surfaces (volcano/terrain/etc.)
       let groundMeshes = [];
-      let worldRoot = null;
+      // Animals you should not walk through
+      let animalMeshes = [];
+
+      // If your GLB object names include these words, we'll auto-detect them.
+      // Tip: rename in Blender to make this perfect (e.g. VOLCANO_GROUND, ELEPHANT_ANIMAL).
+      const GROUND_NAME_HINTS = ["ground", "terrain", "volcano", "mountain", "path", "rock", "floor"];
+      const ANIMAL_NAME_HINTS = ["animal", "elephant", "giraffe", "zebra", "lion", "tiger", "bear", "monkey", "penguin", "hippo", "rhino"];
+
+      const GROUND_NORMAL_MIN_Y = 0.25; // ignore walls/undersides (0.0 = any, 1.0 = perfectly up)
+      const MAX_STEP_UP = 0.8;          // prevent snapping up huge cliffs in one frame
+
+      function looksLikeAnimal(obj) {
+        const n = (obj.name || "").toLowerCase();
+        if (obj.isSkinnedMesh) return true; // skinned meshes are almost always characters/animals
+        return ANIMAL_NAME_HINTS.some((k) => n.includes(k));
+      }
+
+      function looksLikeGround(obj) {
+        const n = (obj.name || "").toLowerCase();
+        return GROUND_NAME_HINTS.some((k) => n.includes(k));
+      }
+
+      function buildCollisionLists(root) {
+        groundMeshes = [];
+        animalMeshes = [];
+
+        root.traverse((obj) => {
+          if (!obj.isMesh) return;
+
+          // Keep raycasting accurate
+          obj.frustumCulled = true;
+
+          // Classify: animals vs ground. If we can't tell, default to ground.
+          if (looksLikeAnimal(obj)) {
+            animalMeshes.push(obj);
+          } else if (looksLikeGround(obj)) {
+            groundMeshes.push(obj);
+          } else {
+            groundMeshes.push(obj);
+          }
+        });
+
+        // If everything got classified as ground (common if nothing is named),
+        // it's still fine — animals won't be blocked unless they are SkinnedMesh or named like an animal.
+        console.log("Collision lists:", { ground: groundMeshes.length, animals: animalMeshes.length });
+      }
 
       function setGroundedHeight() {
         if (!groundMeshes.length) return;
@@ -119,34 +165,69 @@
         origin.y += RAY_START_ABOVE;
 
         raycaster.far = RAY_START_ABOVE + RAY_MAX_DISTANCE;
-        raycaster.set(origin, down);
+        raycaster.set(origin, DOWN);
 
         const hits = raycaster.intersectObjects(groundMeshes, true);
-        if (hits.length > 0) {
-          const groundY = hits[0].point.y;
-          const targetY = groundY + EYE_HEIGHT;
-          camera.position.y = THREE.MathUtils.lerp(camera.position.y, targetY, HEIGHT_SMOOTH);
+        if (!hits.length) return;
+
+        // Pick the first "walkable" face (normal points upward-ish).
+        // If face normals are missing for any reason, fall back to the closest hit.
+        const hit =
+          hits.find((h) => h.face && h.face.normal && h.face.normal.y > GROUND_NORMAL_MIN_Y) || hits[0];
+
+        const groundY = hit.point.y;
+        const targetY = groundY + EYE_HEIGHT;
+        const delta = targetY - camera.position.y;
+
+        // Don't teleport up huge steps
+        if (delta > MAX_STEP_UP) return;
+
+        camera.position.y = THREE.MathUtils.lerp(camera.position.y, targetY, HEIGHT_SMOOTH);
+      }
+
+      function blockAgainstAnimals() {
+        if (!animalMeshes.length) return;
+
+        // Treat each animal like a circle on the XZ plane (cheap + works great).
+        const animalPos = new THREE.Vector3();
+        const scale = new THREE.Vector3();
+
+        for (const a of animalMeshes) {
+          // Cache a radius for this mesh (bounding sphere * scale)
+          if (!a.userData.blockRadius) {
+            if (a.geometry && !a.geometry.boundingSphere) a.geometry.computeBoundingSphere();
+            a.getWorldScale(scale);
+            const maxScale = Math.max(scale.x, scale.y, scale.z);
+            const base = a.geometry?.boundingSphere?.radius ?? 1.0;
+            a.userData.blockRadius = base * maxScale * 0.9;
+          }
+
+          a.getWorldPosition(animalPos);
+
+          const r = a.userData.blockRadius;
+          const dx = camera.position.x - animalPos.x;
+          const dz = camera.position.z - animalPos.z;
+          const dist = Math.hypot(dx, dz);
+
+          if (dist < r && dist > 0.0001) {
+            const push = r - dist;
+            camera.position.x += (dx / dist) * push;
+            camera.position.z += (dz / dist) * push;
+          }
         }
       }
 
       // Load terrain
       const loader = new GLTFLoader();
       loader.load(
-        "./zoo_terrain_v1.glb",
+        "./zoo_terrain.glb",
         (gltf) => {
           const world = gltf.scene;
           worldRoot = world;
           scene.add(world);
 
-          // Collect meshes for raycasting
-          groundMeshes = [];
-          world.traverse((obj) => {
-            if (obj.isMesh) {
-              // Helpful for raycasting performance/accuracy
-              obj.frustumCulled = true;
-              groundMeshes.push(obj);
-            }
-          });
+          // Build collision lists (ground vs animals)
+          buildCollisionLists(world);
 
           // Auto-center model at origin (so camera + movement are sane)
           const box = new THREE.Box3().setFromObject(world);
@@ -189,7 +270,7 @@
           forward.y = 0;
           forward.normalize();
 
-          const right = new THREE.Vector3().crossVectors(forward, camera.up).normalize();
+          const right = new THREE.Vector3().crossVectors(forward, camera.up).normalize().multiplyScalar(-1);
 
           const move = new THREE.Vector3();
           if (keys["KeyW"]) move.add(forward);
@@ -202,7 +283,10 @@
             camera.position.addScaledVector(move, WALK_SPEED * dt);
           }
 
-          // Ground follow keeps you on top of the terrain
+          // Don't walk through animals (simple blockers)
+          blockAgainstAnimals();
+
+          // Ground follow keeps you on top of the terrain/volcano
           setGroundedHeight();
         }
 
