--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       // Load terrain
       const loader = new GLTFLoader();
       loader.load(
-        "./zoo_terrain.glb",
+        "./zoo_terrain_v1.glb",
         (gltf) => {
           const world = gltf.scene;
           worldRoot = world;
